@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-11-11T00:57:32Z",
+  "timestamp" : "2023-11-11T08:14:51Z",
   "count_outdated" : 3258,
   "uniques_outdated" : 1356,
-  "count" : 3288,
-  "uniques" : 1372,
+  "count" : 3289,
+  "uniques" : 1373,
   "clones" : [
     {
       "timestamp": "2023-10-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
